<resources>
    <!--  translatable="false" 代表不可被翻译 &#160;&#160;&#160;&#160;带表空格  -->
    <string name="app_name" translatable="false">new activity</string>
    <string name="phonenumber">手机号:</string>
    <string name="hint_phone">输入手机号</string>
    <string name="password">密&#12288;&#12288;码:</string>
    <string name="password2">确认密码:</string>

    <string name="hint_Verification_code">请输入验证码</string>
    <string name="button_login">登录</string>
    <string name="tv_password_login">密码登录</string>
    <string name="tv_Register_new_member">注册会员</string>
    <string name="btn_Register_new_member">注册会员</string>
    <string name="tv_reset_Password">重置密码</string>
    <string name="tv_get_verification_code">获取验证码</string>
    <string name="tv_register_name">姓&#160;&#160;&#160;&#160;名：</string>
    <string name="hint_register_name">输入真实姓名</string>
    <string name="tv_sex">性&#160;&#160;&#160;&#160;别:</string>
    <string name="tv_xianshi">恭喜发财</string>
    <string name="view">View</string>
    <string name="menu">menu</string>
    <string name="account">账&#12288;&#12288;号:</string>
    <string name="Verification_code">验证码:</string>
    <string name="auto_login">自动登录</string>
    <string name="Remember_password">记住密码</string>
    <string name="Please_enter_password">请输入密码</string>

    <string name="Please_enter_password2">再次确认密码</string>
    <string name="Dialog">Diaolog</string>
    <string name="Change_avatars">更换头像</string>
    <string name="icon">ICON</string>

    <string-array name="contents">
        <!-- 要想保留“” 需要在前面加\ -->
        <item>恭喜发财</item>
        <item>五福临门</item>
        <item>心想事成</item>
        <item>万事如意</item>
        <item>开心一整年</item>
        <item>烦恼消失掉</item>
        <item>开心常围绕</item>
    </string-array>
<string-array name="cities">
    <item>长沙</item>
    <item>锦州</item>
    <item>郴州</item>
    <item>沈阳</item>
</string-array>
</resources>