<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_login_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg_red"
            android:hint="@string/hint_phone"
            android:inputType="phone|number"
            android:paddingLeft="15dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_login_password_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg_red"
            android:hint="@string/Please_enter_password"
            android:inputType="phone|number"
            android:paddingLeft="15dp"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password2"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_login_password_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg_red"
            android:hint="@string/Please_enter_password2"
            android:inputType="phone|number"
            android:paddingLeft="15dp"
            android:textSize="20sp" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_login_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn_bg_selector"
        android:text="@string/button_login"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:text="还没账号？"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />
</LinearLayout>